--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,12 @@
 
     "name": "Hack This Page",
     "description": "This extension makes any webpage editable!",
-    "version": "1.0",
+    "version": "2.0",
+    "icons": {
+        "16": "assets/img/icon16.png",
+        "48": "assets/img/icon48.png",
+        "128": "assets/img/icon128.png"
+    },
 
     "content_scripts": [{
         "matches": ["<all_urls>"],
