--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
 
     "name": "Hack This Page",
-    "description": "This extension makes any webpage editable!",
+    "description": "Hack This Page makes webpages editable!",
     "version": "2.0",
     "icons": {
         "16": "assets/img/icon16.png",
