--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,24 @@
 {
-    "manifest_version": 2,
-
-    "name": "Hack This Page",
-    "description": "Hack This Page makes webpages editable!",
-    "version": "3.0",
-    "icons": {
-        "16": "assets/img/icon16.png",
-        "48": "assets/img/icon48.png",
-        "128": "assets/img/icon128.png"
-    },
-
-    "content_scripts": [{
-        "matches": ["<all_urls>"],
-        "js": ["content.js"]
-    }],
-
-    "browser_action": {
-        "default_icon": "assets/img/icon.png",
-        "default_popup": "popup.html"
-    }
+  "manifest_version": 3,
+  "name": "Hack This Page",
+  "description": "Hack This Page makes webpages editable!",
+  "version": "0.2",
+  "icons": {
+    "16": "assets/img/icon16.png",
+    "48": "assets/img/icon48.png",
+    "128": "assets/img/icon128.png"
+  },
+  "content_scripts": [{
+    "matches": [
+      "<all_urls>"
+    ],
+    "js": [
+      "content.js"
+    ]
+  }],
+  "action": {
+    "default_icon": "assets/img/icon.png",
+    "default_popup": "popup.html"
+  },
+  "content_security_policy": {}
 }
